@@ -4,12 +4,12 @@ package com.meterware.httpunit;
 *
 * Copyright (c) 2000-2002, Russell Gold
 *
-* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
-* documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
+* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+* documentation files (the "Software"), to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
 * to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 *
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions 
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions
 * of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
@@ -39,7 +39,7 @@ import java.util.Enumeration;
  **/
 public class WebConversation extends WebClient {
 
-    
+
     /**
      * Creates a new web conversation.
      **/
@@ -56,12 +56,6 @@ public class WebConversation extends WebClient {
     protected WebResponse newResponse( WebRequest request, String frameName ) throws MalformedURLException, IOException {
         URLConnection connection = openConnection( request.getURL() );
 	    sendHeaders( connection, request.getHeaderDictionary() );
-        if (HttpUnitOptions.isLoggingHttpHeaders()) {
-            for (Enumeration e = getHeaderFields( request.getURL() ).keys(); e.hasMoreElements(); ) {
-                String key = (String) e.nextElement();
-                System.out.println( "Sending:: " + key + ": " + connection.getRequestProperty( key ) );
-            }
-        }
         request.completeRequest( connection );
         return new HttpWebResponse( this, frameName, request.getURL(), connection, getExceptionsThrownOnErrorStatus() );
     }
@@ -91,6 +85,9 @@ public class WebConversation extends WebClient {
         for (Enumeration e = headers.keys(); e.hasMoreElements();) {
             String key = (String) e.nextElement();
             connection.setRequestProperty( key, (String) headers.get( key ) );
+            if (HttpUnitOptions.isLoggingHttpHeaders()) {
+                System.out.println( "Sending:: " + key + ": " + connection.getRequestProperty( key ) );
+            }
         }
     }
 }
